fix margin on mobile in info section

--- a/src/scss/Homepage/_InfoSection.scss
+++ b/src/scss/Homepage/_InfoSection.scss
@@ -20,8 +20,9 @@
     align-items: center;
 
     max-width: 300px;
-    margin: 40px 20px;
+    margin: 20px 20px;
     @include desktop{
+      margin: 40px 20px;
       max-width: 300px;
     }
   }
